feat:添加用户、群聊阅后即焚总开关，查询群聊信息与用户信息是返回偏好设置(是否静默通知等)
