# service/relation/infrastructure/persistence/group_relation_repository.go
@@ -129,3 +129,7 @@ func (repo *GroupRelationRepo) DeleteRelationByGroupIDAndUserIDs(gid uint32, uid
 func (repo *GroupRelationRepo) SetUserGroupSilentNotification(gid uint32, uid string, silentNotification entity.SilentNotification) error {
 	return repo.db.Model(&entity.GroupRelation{}).Where(" group_id = ? AND user_id = ?", gid, uid).Update("silent_notification", silentNotification).Error
 }
+
+func (repo *GroupRelationRepo) SetUserGroupOpenBurnAfterReading(gid uint32, uid string, openBurnAfterReading entity.OpenBurnAfterReadingType) error {
+	return repo.db.Model(&entity.GroupRelation{}).Where(" group_id = ? AND user_id = ?", gid, uid).Update("open_burn_after_reading", openBurnAfterReading).Error
+}
